--- a/Базовые настройки.md
+++ b/Базовые настройки.md
@@ -1,2 +1,83 @@
-# Создание пользователей
-## Заголовок первого уровня
+## Создание пользователей и групп ##
+
+Правой клавишей мыши (ПКМ) на кнопке Windows и выбираем меню “Управление компьютером”, затем “Локальные пользователи” и открываем “Пользователи”.
+
+
+
+ПКМ на “Пользователи” или в открытой “папке” и выбираем
+ “Новый пользователь”. Откроется форма создания пользователя.
+
+
+
+Группы создаются аналогично, через папку “Группы” и ПКМ, “Создать группу”
+
+
+
+
+Внимание!!! 
+Добавить ранее созданного пользователя в группу можно при ее создании, нажав кнопку “Добавить”, перед тем как “Создать” группу.
+
+
+
+Вызвать меню добавления пользователей в группу можно и после создания группы, выбрав ее из списка и откры свойства двойным кликом по имени.
+
+
+
+Затем выбрав “Добавить” вводим имя пользователя.
+
+
+Можно использовать кнопку “Дополнительно” и выбрать пользователя из списка
+
+
+Один пользователь может состоять в нескольких группа, так же как в состав группы может быть добавлена другая группа, уже содержащая в себе пользователей.
+Изменение рабочей группы и имени компьютера
+
+Изменение имени компьютера и рабочей группы в которой он состоит происходит через меню “Свойства”, вызвать котороем можно ПКМ на “Этот компьютер” в проводнике Windows.
+
+Внимание!!!
+В последних версиях Windows может измениться форма, вызываемая данны действием. В этом случае необходимо найти меню “Изменить параметры” исходя из логики или воспользовавшись поиском в интернет.
+
+В открывшемся диалоге жмем кнопку “Изменить” и дальше меняем имя компьютера и группы на необходимые,жмем “Ок” и перезагружаемся.
+
+Изменение базовых параметров компьютера
+
+
+Простой способ отмены переключения перехода в спящий режим.
+ПКМ в любом места рабочего стола, затем “Параметры экрана”
+
+Далее в меню “Питание и спящий режим” в полях “Экран” и “Сон” выставляем “Никогда”
+ 
+
+
+Расширенный способ, с отключением режима сна для жесткого диска компьютера возможен через “Панель управления”, которую можно вызвать через клавишу Windows, набрав “control” или “Панель управления”.
+
+Затем “Система и безопасность” и “Электропитание”, где выбираем “Настройка схемы электропитания”.
+
+В следующем диалоговом окне можно также отключить дисплей и спящий режим выбрав “Никогда”, затем нажать “Изменить дополнительные параметры питания”
+
+
+После чего в ветке “Жесткий диск” выставить значение “0” и подтвердить “Ок” 
+
+
+
+
+
+Настройка сетевого адаптера
+
+
+ПКМ на значке сетевого подключения снизу справа, затем выбираем:
+Открыть “Параметры сети и Интернет”. Затем “Настройка параметров адаптера”
+
+Можно попасть введя команду: ncpa.cpl
+
+
+Далее ПКМ на значке сетевого соединения и “Свойства”, где выбираем настройку “IP версии 4 (TCP / IPv4)
+
+
+Меняем на статический адрес или динамическое получение, по необходимости.
+Изменение настроек происходит при закрытии всех меню настройки.
+
+
+Если выбран DHCP можно ускорить процесс получения адреса введя в cmd:
+ipconfig /release  - отказывается от аренды ранее полученного адреса
+ipconfig /renew  -  запрашивает получение нового адреса по DHCP
